@@ -28,7 +28,7 @@ extern "C"
 extern int vorbis_encode_init(vorbis_info *vi,
 			      long channels,
 			      long rate,
-			      
+
 			      long max_bitrate,
 			      long nominal_bitrate,
 			      long min_bitrate);
@@ -36,22 +36,22 @@ extern int vorbis_encode_init(vorbis_info *vi,
 extern int vorbis_encode_setup_managed(vorbis_info *vi,
 				       long channels,
 				       long rate,
-				       
+
 				       long max_bitrate,
 				       long nominal_bitrate,
 				       long min_bitrate);
-  
+
 extern int vorbis_encode_setup_vbr(vorbis_info *vi,
 				  long channels,
 				  long rate,
-				  
-				  float /* quality level from 0. (lo) to 1. (hi) */
+
+				  float quality /* quality level from 0. (lo) to 1. (hi) */
 				  );
 
 extern int vorbis_encode_init_vbr(vorbis_info *vi,
 				  long channels,
 				  long rate,
-				  
+
 				  float base_quality /* quality level from 0. (lo) to 1. (hi) */
 				  );
 
